--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,5 @@ block content
   h1 Santo Delgado
   h1 C.I.V-24238114
   h1  Seccion: 3
-
-block content
-  p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur tempore officiis ex nesciunt eligendi eos consequuntur et asperiores ducimus veniam modi dolor distinctio sit repellendus ab sint perferendis, nihil dolore!
+  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere assumenda animi ratione aliquid officiis eos atque. Perspiciatis iure error sint voluptatem debitis, commodi, veritatis sapiente, rem magnam suscipit numquam in!
+  
