Atributo de destino HTML
Atributo de destino HTML

--- a/views/index.jade
+++ b/views/index.jade
@@ -49,16 +49,16 @@ html(lang='es')
         h2 Estudiante de Ingenieria en Informatica en la UNERG
         |             
         .redes
-          a(href='https://www.facebook.com/eserxzd')
+          a(href='https://www.facebook.com/eserxzd', target='_blank')
             i.fa-brands.fa-facebook-f
           |                 
-          a(href='https://www.instagram.com/delgado_santo/')
+          a(href='https://www.instagram.com/delgado_santo/', target='_blank')
             i.fa-brands.fa-instagram
           |                 
-          a(href='https://www.linkedin.com/in/santo-de-jesus-delgado-sumoza-285678228')
+          a(href='https://www.linkedin.com/in/santo-de-jesus-delgado-sumoza-285678228', target='_blank')
             i.fa-brands.fa-linkedin-in
           |                 
-          a(href='https://github.com/SantoDelgado')
+          a(href='https://github.com/SantoDelgado', target='_blank')
             i.fa-brands.fa-github
     // SECCION SOBRE MI
     section#sobremi.sobremi
@@ -284,7 +284,7 @@ html(lang='es')
                 | Durante mi trayectoria profesional, tuve la oportunidad de desempeñarme laboralmente en el CONAS, donde adquirí conocimientos y habilidades valiosas en el ámbito de la inteligencia militar y otras areas.
               |                         
               .conectord
-                .circulod                                
+                .circulod
     // SECCION CONTACTO
     section#contacto.contacto
       .contenido-seccion
@@ -331,16 +331,16 @@ html(lang='es')
         i.fa-solid.fa-angles-up
       |         
       .redes
-          a(href='https://www.facebook.com/eserxzd')
+          a(href='https://www.facebook.com/eserxzd', target='_blank')
             i.fa-brands.fa-facebook-f
           |                 
-          a(href='https://www.instagram.com/delgado_santo/')
+          a(href='https://www.instagram.com/delgado_santo/', target='_blank')
             i.fa-brands.fa-instagram
           |                 
-          a(href='https://www.linkedin.com/in/santo-de-jesus-delgado-sumoza-285678228')
+          a(href='https://www.linkedin.com/in/santo-de-jesus-delgado-sumoza-285678228', target='_blank')
             i.fa-brands.fa-linkedin-in
           |                 
-          a(href='https://github.com/SantoDelgado')
+          a(href='https://github.com/SantoDelgado', target='_blank')
             i.fa-brands.fa-github
 
     script(src='/javascripts/script.js')
