--- a/views/index.jade
+++ b/views/index.jade
@@ -85,7 +85,7 @@ html(lang='es')
               |                         
               li
                 strong Email
-                |serxzd@gmail.com
+                |eserxzd@gmail.com
               |                         
               li
                 strong Direcci&oacute;n
