--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ html {
 .contenedor-header header .logo a {
   font-family: "Righteous";
   font-size: 36px;
-  color: #1cb698;
+  color: #fc4b08;
   text-decoration: none;
 }
 .contenedor-header header ul {
@@ -45,10 +45,10 @@ html {
   text-decoration: none;
 }
 .contenedor-header header nav ul li a:hover {
-  color: #1cb698;
+  color: #fc4b08;
 }
 .nav-responsive {
-  background-color: #1cb698;
+  background-color: #fc4b08;
   color: #fff;
   padding: 5px 10px;
   border-radius: 5px;
@@ -79,7 +79,7 @@ html {
 }
 .inicio .contenido-banner img {
   margin-top: 50px;
-  border: 10px solid #1cb698;
+  border: 10px solid #fc4b08;
   width: 200px;
   height: 200px;
   border-radius: 100px;
@@ -131,7 +131,7 @@ html {
   margin-bottom: 20px;
 }
 .sobremi .contenido-seccion p span {
-  color: #1cb698;
+  color: #fc4b08;
   font-weight: bold;
 }
 .sobremi .fila {
@@ -153,11 +153,11 @@ html {
 }
 .sobremi .fila .col ul li strong {
   display: inline-block;
-  color: #1cb698;
+  color: #fc4b08;
   width: 130px;
 }
 .sobremi .fila .col ul li span {
-  background-color: #1cb698;
+  background-color: #fc4b08;
   padding: 3px;
   font-weight: bold;
   border-radius: 5px;
@@ -179,7 +179,7 @@ html {
   transition: 0.3s;
 }
 .sobremi .fila .col .contenedor-intereses .interes:hover {
-  background-color: #1cb698;
+  background-color: #fc4b08;
 }
 .sobremi .fila .col .contenedor-intereses .interes i {
   font-size: 30px;
@@ -204,7 +204,7 @@ html {
   left: 0;
   width: 0;
   height: 100%;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   z-index: -1;
   transition: 1s;
 }
@@ -252,7 +252,7 @@ html {
   margin-bottom: 30px;
 }
 .skills .skill .progreso {
-  background-color: #1cb698;
+  background-color: #fc4b08;
   position: absolute;
   top: 0;
   left: 0;
@@ -262,7 +262,7 @@ html {
   position: absolute;
   height: 40px;
   width: 40px;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   border-radius: 50px;
   line-height: 40px;
   text-align: center;
@@ -446,30 +446,30 @@ html {
   margin-bottom: 10px;
 }
 .curriculum .fila .item .casa {
-  color: #1cb698;
+  color: #fc4b08;
   font-size: 22px;
   font-weight: bold;
   display: block;
 }
 .curriculum .fila .item .fecha {
   display: block;
-  color: #1cb698;
+  color: #fc4b08;
   margin-bottom: 10px;
 }
 .curriculum .fila .item p {
   line-height: 24px;
 }
 .curriculum .fila .izq {
-  border-right: 2px solid #1cb698;
+  border-right: 2px solid #fc4b08;
   margin-right: 20px;
 }
 .curriculum .fila .der {
-  border-left: 2px solid #1cb698;
+  border-left: 2px solid #fc4b08;
   margin-left: 20px;
 }
 .curriculum .fila .item .conectori {
   height: 2px;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   width: 47px;
   position: absolute;
   top: 50%;
@@ -481,14 +481,14 @@ html {
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   float: right;
   position: relative;
   bottom: 4px;
 }
 .curriculum .fila .item .conectord {
   height: 2px;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   width: 47px;
   position: absolute;
   top: 50%;
@@ -500,7 +500,7 @@ html {
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   float: left;
   position: relative;
   bottom: 4px;
@@ -619,7 +619,7 @@ html {
   left: 0;
   width: 0;
   height: 100%;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   z-index: -1;
   transition: 1s;
 }
@@ -645,7 +645,7 @@ html {
   margin-bottom: 20px;
 }
 .contacto .col .info ul li i {
-  color: #1cb698;
+  color: #fc4b08;
   display: inline-block;
   margin-right: 20px;
 }
@@ -677,7 +677,7 @@ footer .arriba {
   display: block;
   width: 50px;
   height: 50px;
-  background-color: #1cb698;
+  background-color: #fc4b08;
   color: #fff;
   position: absolute;
   left: 50%;
