--- a/views/login.jade
+++ b/views/login.jade
@@ -18,7 +18,7 @@ html(lang='en')
           .social-login
             ul
               li
-                a(href='/index', onclick='seleccionar()', target='_blank') INICIO
+                a(href='/index', onclick='seleccionar()') INICIO
     .main-container
       .form-container
         .form-body
@@ -26,7 +26,7 @@ html(lang='en')
           .social-login
             ul
               li.google
-                a(href="/auth/google") Google
+                a(href="/auth/google" target='_blank') Google
           // SOCIAL LOGIN
           form.the-form(action='')
             label(for='email') Email
