--- a/views/login.jade
+++ b/views/login.jade
@@ -26,7 +26,7 @@ html(lang='en')
           .social-login
             ul
               li.google
-                a(href="/auth/google" target='_blank') Google
+                a(href="/auth/google", target='_blank') Google
           // SOCIAL LOGIN
           form.the-form(action='')
             label(for='email') Email
